test/conformance/chainsaw/image-validating-policies/context/globalreference/new-deployment-exists.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-deployment
  namespace: test-globalcontext-apicall-correct
  labels:
    app: new-deployment
