test/conformance/chainsaw/image-validating-policies/context/globalreference/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ImageValidatingPolicy
metadata:
  name: ivpol-apicall-correct
spec:
  webhookConfiguration:
    timeoutSeconds: 20
  evaluation:
    mode: Kubernetes
  validationActions:
    - Deny
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: [v1]
        operations: [CREATE, UPDATE]
        resources: [pods]
  variables:
    - name: dcount
      expression: >-
        globalContext.get("gctxentry-apicall-projections", "test-globalcontext-apicall-correct-projections_deployment_count")
  validations:
    - expression: >-
        variables.dcount == 0
      messageExpression: "'cannot create new deployment as main-deployment already exists, variables.dcount: ' + string(variables.dcount)"
  attestors:
    - name: notary
      notary:
        certs:
          value: |-
            -----BEGIN CERTIFICATE-----
            MIIDTTCCAjWgAwIBAgIJAPI+zAzn4s0xMA0GCSqGSIb3DQEBCwUAMEwxCzAJBgNV
[...]
            uOKpF5rWAruB5PCIrquamOejpXV9aQA/K2JQDuc0mcKz
            -----END CERTIFICATE-----
