test/conformance/chainsaw/image-validating-policies/context/globalreference/gctx-assert.yaml
apiVersion: kyverno.io/v2alpha1
kind: GlobalContextEntry
metadata:
    name: gctxentry-apicall-projections
spec:
    apiCall:
      method: GET
      refreshInterval: 1h
      urlPath: /apis/apps/v1/deployments
    projections:
    - jmesPath: items[?metadata.namespace=='test-globalcontext-apicall-correct'] |
        length(@)
      name: test-globalcontext-apicall-correct-projections_deployment_count
